fixed minor changes for mobile

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </p>
                 <div class="btns flex justify-start">
                     <button class="bg-[#0067b8] text-white rounded-sm px-4 py-2">For one person</button>
-                    <button class="text-[#0067b8] ml-5">For up to six people ></button>
+                    <button class="text-[#0067b8] ml-5">For up to six people <span class="hidden md:block">></span></button>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
                 <p class="paragraph my-2">The next-generation of games. Your goals. Friends and family. Windows 11
                     was made to bring you closer to everything you love.</p>
                 <button
-                    class="bg-[#0067b8] text-white font-semibold text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">See
+                    class="bg-[#0067b8] text-white md:font-semibold md:text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">See
                     if your PC
                     is
                     ready</button>
@@ -110,7 +110,7 @@
                 <p class="paragraph my-2">World-class performance with more privacy, more productivity and more
                     value while you browse.</p>
                 <button
-                    class="bg-[#0067b8] text-white font-semibold text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Download
+                    class="bg-[#0067b8] text-white md:font-semibold md:text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Download
                     now</button>
             </div>
         </div>
@@ -123,7 +123,7 @@
                 <p class="paragraph my-2">Save your files and photos to OneDrive and access them from any device,
                     anywhere.</p>
                 <button
-                    class="bg-[#0067b8] text-white font-semibold text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Learn
+                    class="bg-[#0067b8] text-white md:font-semibold md:text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Learn
                     more</button>
             </div>
         </div>
@@ -135,7 +135,7 @@
                 <h3 class="heading text-xl font-semibold md:text-3xl">Outlook for iOS and Android</h3>
                 <p class="paragraph my-2">Connect. Organise. Get things done.</p>
                 <button
-                    class="bg-[#0067b8] text-white font-semibold text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Download
+                    class="bg-[#0067b8] text-white md:font-semibold md:text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Download
                     now</button>
             </div>
         </div>
@@ -154,7 +154,7 @@
                     <p class="paragraph my-2">Online meetings, chat, real-time collaboration, and shared cloud storage –
                         all in one place.</p>
                     <button
-                        class="bg-[#0067b8] text-white font-semibold text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Find
+                        class="bg-[#0067b8] text-white md:font-semibold md:text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Find
                         the right plan for your bussiness</button>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                     <p class="paragraph my-2">Save time and focus on the things that matter most with AI in Microsoft
                         365 for business.</p>
                     <button
-                        class="bg-[#0067b8] text-white font-semibold text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Learn
+                        class="bg-[#0067b8] text-white md:font-semibold md:text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Learn
                         more</button>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                     <p class="paragraph my-2">Get the most comprehensive IDE for .NET and C++ developers on Windows for
                         building web, cloud, desktop, mobile apps, services and games.</p>
                     <button
-                        class="bg-[#0067b8] text-white font-semibold text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Download
+                        class="bg-[#0067b8] text-white md:font-semibold md:text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Download
                         Visual Studio 2022</button>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                     <p class="paragraph my-2">Securely stream your Windows experience from the Microsoft cloud to any
                         device.</p>
                     <button
-                        class="bg-[#0067b8] text-white font-semibold text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Get
+                        class="bg-[#0067b8] text-white md:font-semibold md:text-base rounded-sm px-3 py-2 lg:absolute lg:bottom-2 lg:mt-4">Get
                         it today</button>
                 </div>
             </div>
